# bouton

./: Cargo.toml  INSTALL.md  README.md  STEPS.md  bouton.toml  test-config.toml
crates/bouton-core/: Cargo.toml
crates/bouton-core/src/: control.rs  lib.rs  mapper.rs
crates/bouton-linux/: Cargo.toml
crates/bouton-linux/src/: gamepad.rs  main.rs  socket_client.rs  ui.rs
crates/bouton-setup/: Cargo.toml
crates/bouton-setup/src/: main.rs
crates/bouton-windows/: Cargo.toml  default.toml
crates/bouton-windows/src/: config.rs  key_injector.rs  keycode.rs  keymap.rs  main.rs  socket_server.rs  ui.rs
