[package]
name = "bouton-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
bouton-core = { path = "../bouton-core", features = ["evdev-support"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evdev = "0.12"
ratatui = "0.27"
crossterm = "0.28"
