[package]
name = "bouton-windows"
version = "0.1.0"
edition = "2024"

[dependencies]
bouton-core = { path = "../bouton-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
windows = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }
lazy_static = "1.4"
